# homelab-aws-creds

./: .gitignore  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: ci.yaml  container.yaml  cross.yaml  rust.yml
deploy/charts/homelab-aws-creds/: Chart.yaml  values.yaml
deploy/charts/homelab-aws-creds/templates/: NOTES.txt  _helpers.tpl  agent-ciliumlocalredirect.yaml  agent-clusterrole.yaml  agent-clusterrolebinding.yaml  agent-daemonset.yaml  agent-service.yaml  agent-serviceaccount.yaml  secret.yaml  webhook-certs.yaml  webhook-deployment.yaml  webhook-mutatingwebhookconfiguration.yaml  webhook-service.yaml
dev/: mappings.yaml
dev/certs/config/: server-ca.json  server.json
dev/test/: admissionreview.json
src/: config.rs  error.rs  lib.rs  main.rs
src/aws/: mod.rs
src/http/: app.rs  mappings.rs  metrics.rs  mod.rs  server.rs  util.rs
src/http/agent/: aws.rs  mod.rs  state.rs
src/http/middleware/: metrics.rs  mod.rs
src/http/webhook/: mod.rs  patch.rs  state.rs
src/kubernetes/: mod.rs
src/netlink/: mod.rs
