[package]
name = "homelab-aws-creds"
version = "0.1.4"
edition = "2021"

[[bin]]
name = "homelab-aws-creds"
path = "src/main.rs"

[lib]
name = "homelab_aws_creds"
path = "src/lib.rs"

[dependencies]
ahash = "0.8"
anyhow = "1"
arc-swap = "1.7.1"
aws-config = { version = "1", default-features = true, features = ["behavior-version-latest"] }
aws-sdk-sts = { version = "1" }
aws-smithy-types = { version = "1" }
axum = { version = "0.8", features = ["tokio", "json", "macros"] }
axum-macros = { version = "0.5.0" }
axum-server = { version = "0.7", features = ["tls-rustls"] }
clap = { version = "4.5", features = ["derive", "env"] }
futures-util = "0.3"
http = "1"
http-body = "1"
json-patch = "3"
jsonptr = "0.6"
k8s-openapi = { version = "0.24", features = ["v1_32"] }
kube = { version = "0.98", default-features = false, features = [
  "client",
  "rustls-tls",
  "runtime",
  "admission"
] }
metrics = { version = "0.24" }
metrics-exporter-prometheus = { version = "0.16" }
notify = "8"
pin-project-lite = "0.2"
rustls-pemfile = "2"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml_ng = "0.10.0"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "signal"] }
tokio-rustls = "0.26"
tokio-util = "0.7"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["trace"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = { git = "https://github.com/rust-netlink/rtnetlink.git", rev = "5fca904b11ba2535fdfac30bf729aa8c10c34c0d" }
